   their shortcuts are also loaded. Still to do: loading individual
   plugin keybindings after startup.
   Group most keybinding callbacks together according to keybinding
   group.
   Add keybindings_set_item() and add it to the plugin API.
   Set main menu widget accels with keybindings_set_item() - they are
   ignored for now. Popup menu accels are set separately.


2008-03-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Use SCI_SETSCROLLWIDTHTRACKING to improve horizontal scrollbar
   behaviour by always adjusting to the longest line (part of #1905141).
 * src/filetypes.c, src/symbols.c, tagmanager/parsers.h,
   tagmanager/makefile.win32, tagmanager/html.c, tagmanager/Makefile.am:
   Add HTML parser to get h1, h2, h3 symbols as well as link anchors and
   JavaScript functions (closes #1896068).


2008-03-07  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/Doxyfile.in, doc/Makefile.am:
   Use doxygen option QUIET to disable non-warning messages instead of
   redirecting output to /dev/null.
 * src/keyfile.c:
   When opening session files, don't try to set document properties if
   the document can't be opened.
 * data/filetypes.common, doc/geany.html, doc/geany.txt,
   src/highlighting.c, src/sciwrappers.c:
   Add opton to style "caret" to change the caret into a block caret.
   Add new styles "translucency", "line_wrap_visuals" and
   "line_wrap_indent" to filetypes.common (#1905141).


2008-03-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/callbacks.c:
   Apply patch from Jeff Pohlmeyer (thanks) to fix toggle case with
   rectangular selections (works only for Ascii characters).


2008-03-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/filetypes.c, src/filetypes.h, src/symbols.c:
   Apply patch from Yura Siamashka to use she-bang filetype detection
   also in filetypes_detect_from_filename() which let plugins benefit
   from this feature.
 * src/document.c: