@@ -3,10 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="generator" content="Docutils 0.4.1: http://docutils.sourceforge.net/" />
+<meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2008-02-21" />
+<meta name="date" content="2008-03-07" />
 <style type="text/css">
 
 /*
@@ -133,7 +133,7 @@ dt {
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2008-02-21</td></tr>
+<td>2008-03-07</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.14</td></tr>
 </tbody>
@@ -1091,14 +1091,10 @@ the grep tool.</p>
 under version control, you can set the <em>Extra options</em> field to use
 grep's <tt class="docutils literal"><span class="pre">--exclude</span></tt> flag to filter out filenames.</p>
 <p>SVN Example: <tt class="docutils literal"><span class="pre">--exclude=*.svn-base</span></tt></p>
-<div class="note">
-<p class="first admonition-title">Note</p>
-<p class="last">The GNU Grep project added support for excluding directories, using
-the --exclude-dir flag. At the time of writing (April 2007) this is
-unreleased outside of version control. Check your Grep manual to
-see if your version supports it.</p>
-</div>
-<p>CVS Example: <tt class="docutils literal"><span class="pre">--exclude-dir=.*</span> <span class="pre">--exclude-dir=CVS</span></tt></p>
+<p>The --exclude argument only matches the file name part, not the path. If
+you have GNU Grep &gt;= 2.5.2 you can use the <tt class="docutils literal"><span class="pre">--exclude-dir</span></tt> argument to
+filter out CVS and hidden directories like <tt class="docutils literal"><span class="pre">.svn</span></tt>.</p>
+<p>Example: <tt class="docutils literal"><span class="pre">--exclude-dir=.*</span> <span class="pre">--exclude-dir=CVS</span></tt></p>
 </div>
 </div>
 <div class="section">
@@ -3462,7 +3458,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2008-03-07 15:41 UTC.
+Generated on: 2008-03-12 17:42 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
